# sfs

./: .clang-format  CMakeLists.txt  Makefile
src/: CMakeLists.txt  matcher.cpp  matcher.hpp  matcher_display.cpp  matcher_display.hpp  sfs.c  sfs.cpp  str_array.c  str_array.h  util.cpp  util.hpp
